--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,22 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "eslint": "^9.25.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "mongoose": "^8.14.0",
+    "node": "^22.15.0",
     "nodemon": "^3.1.10"
   }
 }
